Restore onConfirmChange addition to Button.Confirm Restore button alignment fix

--- a/tgui/packages/tgui/styles/components/Button.scss
+++ b/tgui/packages/tgui/styles/components/Button.scss
@@ -53,11 +53,6 @@ $bg-map: colors.$bg-map !default;
   user-select: none;
   -ms-user-select: none;
 
-  &:last-child {
-    margin-right: 0;
-    margin-bottom: 0;
-  }
-
   .fa,
   .fas,
   .far {
